ex3/testdata/typechecker/ok/MainTest3.java
class MainTest{
    public static void main(String[] args){
        int a;
        int b;    
    }
}
