ex3/testdata/typechecker/error/BinopTest-err2.java
class BinopTest {
	public static void main(String[] a){
            int x;
            x = 5 + false; // TE
	}
}


